force-app/main/default/objects/Initiative__c/fields/Security_Schedule_Payments__c.field-meta.xml
<CustomField>
    <fullName>Security_Schedule_Payments__c</fullName>
    <formula>if(Case( $UserRole.Name, 
&quot;Investment Area Manager - Sport NZ&quot;,1, 
&quot;Investment Area Manager - HPSNZ&quot;,1, 
&quot;Investment Area Manager&quot;,1, 
&quot;HP Manager&quot;,1, 
&quot;Relationship Manager&quot;,1, 
&quot;HP Lead&quot;,1, 
&quot;HP Specialist&quot;,1, 
&quot;HP Planner&quot;,1, 
&quot;Senior_Advisor&quot;,1,
&quot;Senior_Adviser&quot;,1,
&quot;SLT&quot;,1,
&quot;Events Manager&quot;,1,0 

) = 1,true,false)</formula>
    <label>Security - Schedule Payments</label>
    <type>Checkbox</type>
</CustomField>