force-app/main/default/objects/Initiative__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Planning and Performance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Operational Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>