force-app/main/default/objects/Initiative__c/fields/Signed_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Signed_Schedule__c</fullName>
    <label>Signed Schedule</label>
    <type>Url</type>
</CustomField>