force-app/main/default/objects/Initiative__c/fields/Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Text__c</fullName>
    <label>Status Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>