force-app/main/default/objects/Initiative__c/fields/Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Status_Value__c</fullName>
    <label>Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>