force-app/main/default/objects/Initiative__c/fields/Strategic_Area__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area__c</fullName>
    <formula>Investment_Area__r.Strategic_Area__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Area</label>
    <type>Text</type>
</CustomField>