force-app/main/default/objects/Initiative__c/fields/Strategic_Area_Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area_Available_Budget__c</fullName>
    <formula>Investment_Area__r.Strategic_Area__r.Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>