force-app/main/default/objects/Initiative__c/fields/SUM_Payments__c.field-meta.xml
<CustomField>
    <fullName>SUM_Payments__c</fullName>
    <description>It calculates sum of all payments associated with Initiatives where payment status is not canceled.</description>
    <label>Payments</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>