force-app/main/default/objects/Initiative__c/fields/Time_and_Advice_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_and_Advice_Actual_Hours__c</fullName>
    <description>A &apos;Time &amp; Advice&apos; initiative is considered closed when the End Date has past and a value is entered into this field.</description>
    <inlineHelpText>Estimate actual hours to nearest half day.  Enter this only after the initiative has been completed.  Once this field is populated and the Initiative End Date has passed, the Initiative status will automatically change to &apos;Closed&apos;.</inlineHelpText>
    <label>Time and Advice – Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>