force-app/main/default/objects/Initiative__c/fields/Time_and_Advice_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_and_Advice_Planned_Hours__c</fullName>
    <inlineHelpText>This is a required field for Time &amp; Advice initiatives.  Enter the number of hours that are planned to be spent on this Initiative.</inlineHelpText>
    <label>Time and Advice – Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>