force-app/main/default/objects/Initiative__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Off</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Time Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>