force-app/main/default/objects/Initiative__c/fields/Total_Amt_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Payment__c</fullName>
    <label>Total Amt Payment</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>contains</operation>
        <value>Paid, Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>