force-app/main/default/objects/Initiative__c/fields/Total_cancelled_Measures_for_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Total_cancelled_Measures_for_Initiative__c</fullName>
    <label>Total cancelled Measures for Initiative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>