force-app/main/default/objects/Initiative__c/fields/Total_Completed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Payments__c</fullName>
    <label>Total Completed Payments</label>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>contains</operation>
        <value>Paid, Processed</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>