force-app/main/default/objects/Initiative__c/fields/Total_Completed_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Requirements__c</fullName>
    <label>Total Completed Requirements</label>
    <summaryFilterItems>
        <field>Requirement__c.Status__c</field>
        <operation>contains</operation>
        <value>Completed, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>