force-app/main/default/objects/Initiative__c/fields/Total_Paid_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Payments__c</fullName>
    <description>Roll-up to get the count of total paid payments for the initiative</description>
    <label>Total Paid Payments</label>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>