force-app/main/default/objects/Initiative__c/fields/Total_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Total_Requirements__c</fullName>
    <description>Count of total number of requirements associated with initiative.</description>
    <label>Total Requirements</label>
    <summaryForeignKey>Requirement__c.Initiative__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>