force-app/main/default/objects/Initiative__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid Direct</fullName>
            </value>
            <value>
                <fullName>Paid to Third Party</fullName>
            </value>
            <value>
                <fullName>Time &amp; Advice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>