force-app/main/default/objects/Initiative__c/fields/Update_Status_text__c.field-meta.xml
<CustomField>
    <fullName>Update_Status_text__c</fullName>
    <description>Field used by batch job to identify records where the status_text does not equal the status value. If field it true then record will update when batch next run.</description>
    <formula>Status__c  &lt;&gt;  Status_Text__c</formula>
    <label>Update Status_text</label>
    <type>Checkbox</type>
</CustomField>