force-app/main/default/objects/Initiative__c/fields/Work_Brief__c.field-meta.xml
<CustomField>
    <fullName>Work_Brief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Brief</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Work_Brief__c.Stage__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Work_Brief__c</referenceTo>
    <relationshipLabel>Initiatives</relationshipLabel>
    <relationshipName>Initiatives</relationshipName>
    <type>Lookup</type>
</CustomField>