force-app/main/default/objects/Initiative__c/recordTypes/Bundled_Plan.recordType-meta.xml
<RecordType>
    <fullName>Bundled_Plan</fullName>
    <active>true</active>
    <description>For initiatives that contribute to a project or contestable investment. All initiatives in a Project Plan will be of the same Investment Area.</description>
    <label>Project Plan</label>
</RecordType>