force-app/main/default/objects/Initiative__c/recordTypes/Partner_Plan.recordType-meta.xml
<RecordType>
    <fullName>Partner_Plan</fullName>
    <active>true</active>
    <description>For initiatives that are included in the Partner Planning process. Each Initiative in a Partner Plan will belong to only one Partner.</description>
    <label>Partner Plan</label>
</RecordType>