force-app/main/default/objects/Initiative__c/recordTypes/RUL_Read_Only_Initiative.recordType-meta.xml
<RecordType>
    <fullName>RUL_Read_Only_Initiative</fullName>
    <active>true</active>
    <description>This record type will be used to prevent edit of record when Inv schedule status is Approved or Signed.</description>
    <label>Read Only Initiative</label>
</RecordType>