force-app/main/default/objects/Initiative__c/validationRules/Active_Cost_Centre.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Cost_Centre</fullName>
    <active>true</active>
    <errorConditionFormula>((isnew() &amp;&amp; not(isblank(Cost_Centre__c))) || ischanged( Cost_Centre__c )) &amp;&amp;  not(ispickval(Cost_Centre__r.Status__c,&quot;Active&quot;))</errorConditionFormula>
    <errorDisplayField>Cost_Centre__c</errorDisplayField>
    <errorMessage>Please select an active Cost Centre</errorMessage>
</ValidationRule>