force-app/main/default/objects/Initiative__c/validationRules/Active_Investment_Area.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Investment_Area</fullName>
    <active>true</active>
    <errorConditionFormula>(isnew() || ischanged(Investment_Area__c)) &amp;&amp; ispickval(Investment_Area__r.Status__c,&quot;Closed&quot;)</errorConditionFormula>
    <errorDisplayField>Investment_Area__c</errorDisplayField>
    <errorMessage>Please select a &apos;Draft or &apos;Active&apos; Investment Area</errorMessage>
</ValidationRule>