force-app/main/default/objects/Initiative__c/validationRules/Activity_ID_AND_Project_ID_only_on_HP.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_ID_AND_Project_ID_only_on_HP</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Investment_Area__r.Strategic_Area__r.Entity__c  , &quot;Sport NZ&quot;),
OR(
NOT(ISBLANK(ActivityID__c)),
NOT(ISBLANK(ProjectID__c) )
)
)</errorConditionFormula>
    <errorDisplayField>Activity_ID__c</errorDisplayField>
    <errorMessage>Activity ID and Project ID can only be populated if the initiative is related to a &apos;High Performance&apos; strategic area</errorMessage>
</ValidationRule>