force-app/main/default/objects/Initiative__c/validationRules/CheckIfPlanIsNonCompliant.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIfPlanIsNonCompliant</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , ISPICKVAL( Plan__r.Status__c , &quot;Non-compliant&quot;))</errorConditionFormula>
    <errorMessage>The Parter is non-compliant with a National Policy. While they are non-compliant they are not eligible for any new investment. If you believe they are compliant please talk to the Investment Team Manager.</errorMessage>
</ValidationRule>