force-app/main/default/objects/Initiative__c/validationRules/Close_initiative_for_past_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_initiative_for_past_date</fullName>
    <active>false</active>
    <description>Initiative can be closed only when all payments and requirements got closed as well as initiative end date is past date.</description>
    <errorConditionFormula>IF(Is_Initiative_Closed__c = true &amp;&amp; End_Date__c &gt;= TODAY(),true,false)</errorConditionFormula>
    <errorMessage>This initiative cannot be closed because its end date is not a past date.</errorMessage>
</ValidationRule>