force-app/main/default/objects/Initiative__c/validationRules/Closed_strategic_area_Initiative.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_strategic_area_Initiative</fullName>
    <active>true</active>
    <description>Creation of Initiative is not allowed when Investment area of initiative is associated with closed strategic area.</description>
    <errorConditionFormula>IF(ISPICKVAL(Investment_Area__r.Strategic_Area__r.Status__c,&quot;Closed&quot;) &amp;&amp; ISNEW(), true, false)</errorConditionFormula>
    <errorMessage>An initiative cannot be added to an Investment Area which is associated with a closed Strategic Area.</errorMessage>
</ValidationRule>