force-app/main/default/objects/Initiative__c/validationRules/Expense_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Code</fullName>
    <active>true</active>
    <errorConditionFormula>(isnew() || ischanged(Expense_Code__c)) &amp;&amp; not(isblank(Expense_Code__c)) &amp;&amp; not(ispickval(Expense_Code__r.Status__c,&quot;Active&quot;))</errorConditionFormula>
    <errorDisplayField>Expense_Code__c</errorDisplayField>
    <errorMessage>Please select an Expense Code which has status of Active.</errorMessage>
</ValidationRule>