force-app/main/default/objects/Initiative__c/validationRules/Initiative_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Initiative_Closure</fullName>
    <active>true</active>
    <description>Initiative Closure by Investment Area Manager</description>
    <errorConditionFormula>Close_the_Initiative__c = true &amp;&amp; (Total_Completed_Requirements__c != Total_Requirements__c || Total_Payments__c != Total_Completed_Payments__c || Pending_Measures__c != 0)</errorConditionFormula>
    <errorMessage>To close the Initiative all Payments should be Paid, all Requirements should be Completed &amp; no Measures should be Pending</errorMessage>
</ValidationRule>