force-app/main/default/objects/Initiative__c/validationRules/Initiative_Start_Date_Within_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Initiative_Start_Date_Within_Plan</fullName>
    <active>true</active>
    <description>The Initiative Start Date must be within the timeframe set on the related Plan.</description>
    <errorConditionFormula>Start_Date__c &lt; Plan__r.Start_Date__c</errorConditionFormula>
    <errorMessage>Initiative Start Date must be within the selected Planning Period</errorMessage>
</ValidationRule>