force-app/main/default/objects/Initiative__c/validationRules/Investment_Area_Can_not_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Investment_Area_Can_not_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(SUM_Payments__c !=0,  ISCHANGED( Investment_Area__c ) )</errorConditionFormula>
    <errorDisplayField>Investment_Area__c</errorDisplayField>
    <errorMessage>To change the Investment Area please delete all payments first or contact the administrator.</errorMessage>
</ValidationRule>