force-app/main/default/objects/Initiative__c/validationRules/Sum_Of_CS_and_HP_should_not_exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Sum_Of_CS_and_HP_should_not_exceed_100</fullName>
    <active>true</active>
    <description>On Initiative the sum of Community % and High Performance % should not exceed 100%</description>
    <errorConditionFormula>Community__c + High_Performance__c &gt; 1</errorConditionFormula>
    <errorMessage>Sum of Community % and High Performance % must not exceed 100%</errorMessage>
</ValidationRule>