force-app/main/default/objects/Initiative__c/validationRules/Time_and_advice_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_and_advice_must_be_positive</fullName>
    <active>true</active>
    <description>Time and advice must be positive</description>
    <errorConditionFormula>OR(
Time_and_Advice_Actual_Hours__c   &lt;=  0,
Time_and_Advice_Planned_Hours__c    &lt;=  0
)</errorConditionFormula>
    <errorMessage>Time &amp; Advice planned and actual hours must be a positive number</errorMessage>
</ValidationRule>