force-app/main/default/objects/Initiative__c/validationRules/Time_and_advice_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_and_advice_validation_rule</fullName>
    <active>true</active>
    <description>Time and advice actual hours and planed hours are only allowed to enter when initiative type is Time &amp; Advice.</description>
    <errorConditionFormula>IF(NOT(ISPICKVAL(Type__c,&quot;Time &amp; Advice&quot;))&amp;&amp;(NOT(ISBLANK(  Time_and_Advice_Actual_Hours__c )) || NOT(ISBLANK( Time_and_Advice_Planned_Hours__c ))),true,false)</errorConditionFormula>
    <errorMessage>Time and advice actual hours and planned hours can only be entered when the Initiative type is Time &amp; Advice.</errorMessage>
</ValidationRule>