force-app/main/default/objects/Initiative__c/validationRules/Work_Brief_Only_For_SportNZ.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Brief_Only_For_SportNZ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Investment_Area__r.Strategic_Area__r.Entity__c, &quot;High Performance&quot;),
  NOT ISBLANK(Work_Brief__c)
)</errorConditionFormula>
    <errorDisplayField>Work_Brief__c</errorDisplayField>
    <errorMessage>The &quot;Work Brief&quot; field can only be populated if the initiative is related to a Sport New Zealand strategic area. It is not available for High Performance initiatives!</errorMessage>
</ValidationRule>