force-app/main/default/objects/Initiative__c/listViews/All_Current.listView-meta.xml
<ListView>
    <fullName>All_Current</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Plan__c</columns>
    <columns>Planned__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Investment_Area__c</columns>
    <columns>Investment_Area_Available_Budget_Flag__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Current Initiatives (not Closed)</label>
</ListView>