force-app/main/default/objects/Initiative__c/listViews/Draft_Initiatives.listView-meta.xml
<ListView>
    <fullName>Draft_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Plan__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Planned__c</columns>
    <columns>Paid__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Initiatives</label>
</ListView>