force-app/main/default/objects/Initiative__c/listViews/My_Initiatives.listView-meta.xml
<ListView>
    <fullName>My_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Plan__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Planned__c</columns>
    <columns>Paid__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Initiative_Flag__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Initiatives</label>
</ListView>