force-app/main/default/objects/Initiative__c/listViews/Paid_Third_Party.listView-meta.xml
<ListView>
    <fullName>Paid_Third_Party</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Plan__c</columns>
    <columns>Planned__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Investment_Area__c</columns>
    <columns>Investment_Area_Available_Budget_Flag__c</columns>
    <columns>Partner_Planning_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Paid to Third Party</value>
    </filters>
    <label>Paid to Third Party</label>
</ListView>