force-app/main/default/objects/Initiative__c/listViews/TAPS_BTG_Investment_2022_24.listView-meta.xml
<ListView>
    <fullName>TAPS_BTG_Investment_2022_24</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Plan__c</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Planned__c</columns>
    <columns>Requested__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Paid__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Draft__c</columns>
    <columns>Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Area__c</field>
        <operation>equals</operation>
        <value>TAPS Investment 2024</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <filters>
        <field>ActivityID__c</field>
        <operation>equals</operation>
        <value>TAPS35 (TAPS Base Training Grant)</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Initiative__c.Partner_Plan</value>
    </filters>
    <label>TAPS/BTG Investment / 2022-24</label>
</ListView>