force-app/main/default/objects/Initiative__c/listViews/TAPS_EG_Investment_2022_24.listView-meta.xml
<ListView>
    <fullName>TAPS_EG_Investment_2022_24</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Plan__c</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Planned__c</columns>
    <columns>Paid__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Draft__c</columns>
    <columns>Remaining__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Area__c</field>
        <operation>equals</operation>
        <value>TAPS Investment 2024</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <filters>
        <field>ActivityID__c</field>
        <operation>contains</operation>
        <value>TAPS37 (TAPS Excellence Grant),TAPS39 (TAPS Sustained Excellence Grant),TAPS40 (TAPS Top Up Grant)</value>
    </filters>
    <label>TAPS/EG Investment / 2022-24</label>
</ListView>